# word2vec-numpy-realization

./: .gitignore  README.md  pyproject.toml
notebooks/: test.ipynb
src/numpyword2vec/: __init__.py  word2vec.py
